--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,7 +12,7 @@ on:
         required: false
         default: 'chrome'
   schedule:
-    - cron: '0 8 * * 1-5' # 8:00 de segunda a sexta (UTC)
+  - cron: '30 1 * * *' # 8:00 de segunda a sexta (UTC)
   pull_request:
     branches: [ main ]
 
