--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,7 +12,7 @@ on:
         required: false
         default: 'chrome'
   schedule:
-  - cron: '30 1 * * *' # 8:00 de segunda a sexta (UTC)
+    - cron: '35 1 * * *'   # 01:35 UTC = 22:35 BRT
   pull_request:
     branches: [ main ]
 
