--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,7 +12,7 @@ on:
         required: false
         default: 'chrome'
   schedule:
-    - cron: '35 1 * * *'   # 01:35 UTC = 22:35 BRT
+    - cron: '0 11 * * *'   # 11:00 UTC = 8:00 BRT, todos os dias
   pull_request:
     branches: [ main ]
 
