--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Cypress
+cypress/results/
+cypress/videos/
+cypress/screenshots/
+mochawesome.json
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+*.log
+npm-debug.log*
