--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,9 +12,14 @@ on:
         required: false
         default: 'chrome'
   schedule:
-    - cron: '0 11 * * *'   # 11:00 UTC = 8:00 BRT, todos os dias
+    - cron: '0 11 * * 1-5'
   pull_request:
     branches: [ main ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   cypress-run:
