--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:smoke": "cypress run --env grepTags='@smoke'",
+    "cy:run:regressivo": "cypress run --env grepTags='@regressivo'",
+    "cy:run:cadastro": "cypress run --env grepTags='@cadastro'",
+    "cy:run:login": "cypress run --env grepTags='@login'",
+    "cy:run:transferencia": "cypress run --env grepTags='@transferencia'",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "allure:serve": "allure serve allure-results",
+    "test:all": "npm run cy:run && npm run allure:generate && npm run allure:open"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +26,10 @@
     "stepDefinitions": "cypress/e2e/step_definitions"
   },
   "devDependencies": {
+    "@cypress/grep": "^4.1.1",
+    "@shelex/cypress-allure-plugin": "^2.41.2",
+    "allure-commandline": "^2.34.1",
     "cypress": "^14.5.3",
-    "cypress-cucumber-preprocessor": "^4.3.1",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^5.0.0",
-    "mochawesome-report-generator": "^6.2.0"
+    "cypress-cucumber-preprocessor": "^4.3.1"
   }
 }
