--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -38,9 +38,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Allure CLI
-        run: npm install -g allure-commandline --save-dev
-
       - name: Run Cypress tests
         run: |
           if [ -n "${{ env.CYPRESS_TAG }}" ]; then
@@ -49,10 +46,26 @@ jobs:
             npx cypress run --browser ${{ env.CYPRESS_BROWSER }}
           fi
 
+      - name: Debug - List allure-results contents
+        if: always()
+        run: |
+          echo "Checking allure-results directory..."
+          ls -la allure-results/ || echo "allure-results directory not found"
+          echo "Contents of allure-results:"
+          find allure-results -type f -name "*.json" | head -10 || echo "No JSON files found"
+
       - name: Generate Allure Report
         if: always()
         run: |
-          npx allure generate allure-results --clean -o allure-report
+          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
+            npx allure generate allure-results --clean -o allure-report
+            echo "Allure report generated successfully"
+            ls -la allure-report/
+          else
+            echo "No allure-results found, creating empty report"
+            mkdir -p allure-report
+            echo "<h1>No test results found</h1>" > allure-report/index.html
+          fi
 
       - name: Setup Pages
         if: always()
