--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -46,25 +46,25 @@ jobs:
             npx cypress run --browser ${{ env.CYPRESS_BROWSER }}
           fi
 
-      - name: Debug - List allure-results contents
+      - name: Debug - Check reports directory
         if: always()
         run: |
-          echo "Checking allure-results directory..."
-          ls -la allure-results/ || echo "allure-results directory not found"
-          echo "Contents of allure-results:"
-          find allure-results -type f -name "*.json" | head -10 || echo "No JSON files found"
+          echo "Checking reports directory..."
+          ls -la cypress/reports/ || echo "reports directory not found"
+          find cypress/reports -name "*.json" | head -5 || echo "No JSON files found"
 
-      - name: Generate Allure Report
+      - name: Generate HTML Report
         if: always()
         run: |
-          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
-            npx allure generate allure-results --clean -o allure-report
-            echo "Allure report generated successfully"
-            ls -la allure-report/
+          if [ -d "cypress/reports" ] && [ "$(find cypress/reports -name '*.json' | head -1)" ]; then
+            npx mochawesome-merge cypress/reports/*.json > mochawesome.json
+            npx marge mochawesome.json -f report -o ./html-report
+            echo "HTML report generated successfully"
+            ls -la html-report/
           else
-            echo "No allure-results found, creating empty report"
-            mkdir -p allure-report
-            echo "<h1>No test results found</h1>" > allure-report/index.html
+            echo "No test results found, creating placeholder"
+            mkdir -p html-report
+            echo "<h1>No test results found</h1><p>Tests may not have run successfully.</p>" > html-report/index.html
           fi
 
       - name: Setup Pages
@@ -75,7 +75,7 @@ jobs:
         if: always()
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./allure-report
+          path: ./html-report
 
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'
