--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "stepDefinitions": "cypress/e2e/step_definitions"
   },
   "devDependencies": {
-    "@cypress/grep": "^4.1.1",
-    "cypress": "^14.5.3",
-    "cypress-cucumber-preprocessor": "^4.3.1",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "marge": "^1.0.1"
+    "@cypress/grep": "4.1.1",
+    "cypress": "13.15.2",
+    "cypress-cucumber-preprocessor": "4.3.1",
+    "mochawesome": "7.1.3",
+    "mochawesome-merge": "4.3.0",
+    "marge": "1.0.1"
   }
 }
