--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -36,18 +36,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Clean npm cache
-        run: npm cache clean --force
-
-      - name: Remove node_modules and package-lock
-        run: |
-          rm -rf node_modules
-          rm -f package-lock.json
-
       - name: Install dependencies
-        run: |
-          npm install --legacy-peer-deps
-          npm ls || echo "Dependency tree issues detected but continuing..."
+        run: npm ci
 
       - name: Run Cypress tests
         run: |
